Changes by Ashv

--- a/WTO/Views/Partial/ManageAccess/Template.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Template.cshtml
@@ -216,10 +216,10 @@
                 { name: 'CustomPlugin', items: ['customplugin'] }
             ],
         };
-        config.extraPlugins = 'autogrow';
-        config.autoGrow_minHeight = 200;
-        config.autoGrow_maxHeight = 600;
-        config.autoGrow_bottomSpace = 50;
+        //config.extraPlugins = 'autogrow';
+        //config.autoGrow_minHeight = 200;
+        //config.autoGrow_maxHeight = 1000;
+        //config.autoGrow_bottomSpace = 50;
         CKEDITOR.replace(txtMessage, config);
 
 
