--- a/WTO/Views/WTO/NotificationList.cshtml
+++ b/WTO/Views/WTO/NotificationList.cshtml
@@ -82,7 +82,7 @@ else
                     <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-10">
                         <div class="row">
                             <div class="col-xs-8 col-sm-6 col-md-6">
-                                <h4 class="black-color" style="margin-top:0px;"><img src="~/contents/img/bellicon.png" alt="" style="margin-right:15px;"><b>Notification</b></h4>
+                                <h4 class="black-color" style="margin-top:0px;"><img src="~/contents/img/bellicon.png" alt="" style="margin-right:15px;"><b>Notification List</b></h4>
                             </div>
                             <div class="col-xs-4 col-sm-6 col-md-6">
                                 @if (Model.TotalCount > 0)
