--- a/WTO/Views/MoM/Index.cshtml
+++ b/WTO/Views/MoM/Index.cshtml
@@ -13,7 +13,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-10">
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12">
-                                <h4 class="black-color" style="margin-top:0px;"><img src="~/contents/img/meetingList.png" alt="" style="margin-right:15px;"><b>Scheduled meetings</b></h4>
+                                <h4 class="black-color" style="margin-top:0px;"><img src="~/contents/img/meetingList.png" alt="" style="margin-right:15px;"><b>Meeting schedules</b></h4>
                             </div>
                         </div>
                     </div>
@@ -22,7 +22,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
                         <div class="col-xs-12 col-sm-12 col-md-12">
                             <div class="row darkBlueblackbackground padding-10">
-                                <h4 class="white-color" style="padding-left:5px;"><b>Scheduled meetings</b></h4>
+                                <h4 class="white-color" style="padding-left:5px;"><b>Meeting schedules</b></h4>
                             </div>
                         </div>
                     </div>
