--- a/WTO/Views/WTO/NotificationList.cshtml
+++ b/WTO/Views/WTO/NotificationList.cshtml
@@ -109,7 +109,7 @@ else
                                     <div class="row top-offset-20">
                                         <div class="col-xs-12 col-sm-4 col-md-2">
                                             <div class="form-group">
-                                                <label>Notification number</label>
+                                                <label>Notification No.</label>
                                                 <input id="txtNotificationNumber" type="text" class="form-control textboxcontrol">
                                             </div>
                                         </div>
@@ -289,7 +289,7 @@ else
                                         </div>
                                         <div class="col-xs-12 col-sm-4 col-md-2 SearchAdvnc">
                                             <div class="form-group">
-                                                <label>Hs Codes</label>
+                                                <label>HS Code</label>
                                                 <div class="form-group has-feedback ">
                                                     <input type="text" class="form-control textboxcontrol" id="txtHscode" placeholder="Hscode" value="@ViewBag.Hscode">
                                                     <input type="hidden" id="hdnHsCode" value="@ViewBag.Hscode" />
