--- a/WTO/Views/Partial/Notification/NotificationActions.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationActions.cshtml
@@ -135,8 +135,11 @@
     </div>
 </div>
 
-<!--Action checkbox popup-->
-@{ Html.RenderAction("GetNotificationPlanTakeAction", "AddNotification", new { Id = Model.NotificationId }); }
+<!--Plan action Popup start-->
+<div id="divNotificationPlanTakeAction">
+    @{ Html.RenderAction("NotificationPlanTakeAction", "MoM", new { Id = 0, MeetingId = 0 }); }
+</div>
+<!--Plan action Popup End-->
 
 <div class="modal fade selecthrmodal" id="ViewActionModal" role="dialog" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-lg selecthrdialog">
@@ -158,7 +161,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <input  type="hidden" id="hdnActionMailId" value="0"/>
+                                <input type="hidden" id="hdnActionMailId" value="0" />
                                 <div class="top-offset-10">
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
@@ -361,23 +364,23 @@
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
                                     <div class="col-xs-12 pull-right">
-                                        <a class="btn btn-red btn-padding pull-right left-offset-10" role="button" data-toggle="collapse"  onclick="ClearActionResponse();">Discard</a>
+                                        <a class="btn btn-red btn-padding pull-right left-offset-10" role="button" data-toggle="collapse" onclick="ClearActionResponse();">Discard</a>
                                         <a class="btn btn-light-blue btn-padding pull-right" onclick="return SaveActionResponse();">Save response</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 
 
-                    <!-- edit meeting note modal popup -->
-                    <div class="modal fade selecthrmodal" id="AddNote" role="dialog" data-backdrop="static" data-keyboard="false">
-                        @{ Html.RenderAction("GetNotificatioNote", "AddNotification", new { Id = @Model.NotificationId }); }
-                    </div>
-                    <!-- edit meeting note modal popup -->
+<!-- edit meeting note modal popup -->
+<div class="modal fade selecthrmodal" id="AddNote" role="dialog" data-backdrop="static" data-keyboard="false">
+    @{ Html.RenderAction("GetNotificatioNote", "AddNotification", new { Id = @Model.NotificationId }); }
+</div>
+<!-- edit meeting note modal popup -->
