--- a/WTO/Views/Partial/ManageAccess/InternalStackHolders.cshtml
+++ b/WTO/Views/Partial/ManageAccess/InternalStackHolders.cshtml
@@ -77,7 +77,7 @@
                                 <h4 class="selecthrheading" id="AddInternalStackholderpopupHead">Add Internal Stakeholder</h4>
                                 <hr>
                             </div>
-                            <form class="form-horizontal top-offset-20" action="/action_page.php">
+                            <form class="form-horizontal top-offset-20 defaultdiv">
                                 <div class="form-group">
                                     <label class="control-label col-sm-3"> Name<sup class="mandetory">*</sup><span class="hidden-xs">:</span></label>
                                     <div class="col-sm-9">
@@ -116,7 +116,7 @@
                                     <div class="col-sm-offset-3 col-sm-9">
                                         <div class="row">
                                             <div class="col-sm-6">
-                                                <a href="#" id="InternalStakeholderSaveUpdate" class="btn btn-dark-green btn-block btn-padding bottom-offset-10" onclick="internalstakeholdervalidate();">Save</a>
+                                                <a href="#" id="InternalStakeholderSaveUpdate" class="btn btn-dark-green btn-block btn-padding bottom-offset-10 searchbtndiv" onclick="internalstakeholdervalidate();">Save</a>
                                             </div>
                                             <div class="col-sm-6">
                                                 <a href="#" class="btn btn-red btn-block btn-padding" data-dismiss="modal">Close</a>
@@ -142,5 +142,13 @@
             $("th").removeClass("col-sm-1 col-sm-2 col-sm-3 table-fixed");
             $("td").removeClass("col-sm-1 col-sm-2 col-sm-3 table-fixed");
         }
+    
+        $(".defaultdiv").bind('keydown', function (e) {
+            if (e.which === 13) {
+                $(this).find(".searchbtndiv").click();
+                return false;
+            }
+        });
+
     });
 </script>
