--- a/WTO/Views/Partial/ManageAccess/Language.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Language.cshtml
@@ -70,7 +70,7 @@
                                 <h4 class="selecthrheading" id="AddLanguaugepopupHead">Add Language</h4>
                                 <hr>
                             </div>
-                            <form class="form-horizontal top-offset-20" action="/action_page.php">
+                            <form class="form-horizontal top-offset-20 defaultdiv">
                                 <div class="form-group">
                                     <label class="control-label col-sm-3">Language<sup class="mandetory">*</sup>:</label>
                                     <div class="col-sm-9">
@@ -91,7 +91,7 @@
                                     <div class="col-sm-offset-3 col-sm-9">
                                         <div class="row">
                                             <div class="col-sm-6">
-                                                <a href="#" id="LanguageSaveUpdate" class="btn btn-dark-green btn-block btn-padding bottom-offset-10" onclick="Languagevalidate();">Save</a>
+                                                <a href="#" id="LanguageSaveUpdate" class="btn btn-dark-green btn-block btn-padding bottom-offset-10 searchbtndiv" onclick="Languagevalidate();">Save</a>
                                             </div>
                                             <div class="col-sm-6">
                                                 <a href="#" class="btn btn-red btn-block btn-padding" data-dismiss="modal">Close</a>
@@ -115,5 +115,14 @@
             $("th").removeClass("table-fixed");
             $("td").removeClass("table-fixed");
         }
+
+        $(".defaultdiv").bind('keydown', function (e) {
+            if (e.which === 13) {
+                $(this).find(".searchbtndiv").click();
+                return false;
+            }
+        });
+
     });
+    
 </script>
