--- a/WTO/Views/Partial/ManageAccess/RegulatoryBodies.cshtml
+++ b/WTO/Views/Partial/ManageAccess/RegulatoryBodies.cshtml
@@ -80,7 +80,7 @@
                                 <h4 class="selecthrheading" id="AddRegulatoryBodiespopupHead">Add Regulatory Body</h4>
                                 <hr>
                             </div>
-                            <form class="form-horizontal top-offset-20" action="/action_page.php">
+                            <form class="form-horizontal top-offset-20 defaultdiv">
                                 <div class="form-group">
                                     <label class="control-label col-sm-3"> Name<sup class="mandetory">*</sup>:</label>
                                     <div class="col-sm-9">
@@ -119,7 +119,7 @@
                                     <div class="col-sm-offset-3 col-sm-9">
                                         <div class="row">
                                             <div class="col-sm-6">
-                                                <a href="#" id="RegulatoryBodySaveUpdate" class="btn btn-dark-green btn-block btn-padding bottom-offset-10" onclick="RegulatoryBodiesvalidate();">Save</a>
+                                                <a href="#" id="RegulatoryBodySaveUpdate" class="btn btn-dark-green btn-block btn-padding bottom-offset-10 searchbtndiv" onclick="RegulatoryBodiesvalidate();">Save</a>
                                             </div>
                                             <div class="col-sm-6">
                                                 <a href="#" class="btn btn-red btn-block btn-padding" data-dismiss="modal">Close</a>
@@ -143,5 +143,13 @@
             $("th").removeClass("col-sm-1 col-sm-2 table-fixed");
             $("td").removeClass("col-sm-1 col-sm-2 table-fixed");
         }
+
+        $(".defaultdiv").bind('keydown', function (e) {
+            if (e.which === 13) {
+                $(this).find(".searchbtndiv").click();
+                return false;
+            }
+        });
+
     });
 </script>
